[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-nissan-leaf-obd-ble"
version = "0.1.1"
description = "Python hardware API for Nissan Leaf OBD BLE dongles (BLE + ELM327 over CAN), extracted from the Home Assistant integration."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-2.0-or-later" }
authors = [
  { name = "Paul Butterworth" },
]
keywords = ["obd", "can", "ble", "nissan", "leaf", "home-assistant"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "bleak",
  "bleak-retry-connector",
]

[project.urls]
Homepage = "https://github.com/pbutterworth/py-nissan-leaf-obd-ble"
Repository = "https://github.com/pbutterworth/py-nissan-leaf-obd-ble"
Issues = "https://github.com/pbutterworth/py-nissan-leaf-obd-ble/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/py_nissan_leaf_obd_ble"]

[tool.hatch.build.targets.sdist]
include = [
  "src/py_nissan_leaf_obd_ble",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

